<resources>
    <string name="app_name">RegistrationThenGames</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm_password</string>
    <string name="reg">Регистрация</string>
    <string name="login">Войти</string>
    <string name="registrationInApp">Зарегистрироваться</string>
    <string name="games">Games</string>
    <string name="rawg">RAWG</string>
    <string name="registrationRaw">Registration</string>
</resources>