<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround_login"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/rawgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editEmail"
        android:layout_centerInParent="true"
        android:layout_marginBottom="55dp"
        android:text="@string/rawg"
        android:textAlignment="center"
        android:textColor="#FE7209"
        android:textSize="80sp" />

    <TextView
        android:id="@+id/gamesView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editEmail"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:text="@string/games"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="25dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        app:endIconMode="clear_text"
        app:endIconTint="@color/white"
        app:helperText="Введите почту"
        app:helperTextTextColor="#A365A8"
        app:startIconDrawable="@drawable/ic_email"
        app:startIconTint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="30dp">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_color"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmail"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:helperText="Введите пароль"
        app:helperTextTextColor="#A365A8"
        app:startIconDrawable="@drawable/ic_lock"
        app:startIconTint="@color/white"
        tools:layout_editor_absoluteX="30dp">

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edit_text_color"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="@color/white"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn"
        android:padding="5dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp" />


    <TextView
        android:id="@+id/CreateAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn"
        android:padding="8dp"
        android:text="@string/registrationInApp"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>